# recorder_plugin

./: .gitignore  CMakeLists.txt  README.md  package.xml  plugin.xml  setup.py
resource/: recorder.ui
src/recorder_plugin/: SimilarityChecker.py  main.py
